--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@ h1 {
 
   width: 650px;
   height: 350px;
-  border: 2px solid #555;
+  border: 2px solid white;
   background: #007d36;
   position: relative;
   margin: 0 auto;
+  display:none;
 
 }
 
@@ -63,4 +64,119 @@ h1 {
 .semicirculo2 {
   transform: rotate(180deg);
   left:496px;
+}
+
+#balon {
+
+  width: 100px;
+  height: 100px;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  background: #FFFFFF;
+  border-top: 200px;
+  position:absolute;
+  margin-top: 150px;
+  margin-left: 350;
+
+}
+
+.triangulo{
+
+  margin-top:45px;
+  margin-left:28px;
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 20px solid black;
+
+}
+
+.trapecio{
+
+  color: red;
+
+  margin-top:0px;
+
+  margin-left:27px;
+
+    width: 25px;
+
+    height: 0px;
+
+    border-right: 8px solid transparent;
+
+    border-left: 8px solid transparent;
+
+  border-top: 20px solid black;
+
+}
+
+.linea{
+
+  border-left: 2px solid  black  ;
+
+  margin-left: 150px;
+
+  width:10px;
+
+  height:50px;
+
+  margin-top: -15px;
+
+  margin-left:27px;
+
+  transform: rotate(50deg)
+
+}
+
+.lineaArriba{
+
+  border-left: 2px solid  black  ;
+
+  margin-left: -8px;
+
+  width:10px;
+
+  height:30px;
+
+  margin-top: -80px;
+
+  margin-left:17px;
+
+  transform: rotate(-50deg)
+
+}
+
+.lineaArriba2{
+
+  margin-top: -43px;
+
+  border-left: 2px solid  black  ;
+
+  margin-left:48px;
+
+  width:10px;
+
+  height:20px;
+
+  transform: rotate(0deg)
+
+}
+
+.lineaAbajo{
+
+  border-left: 2px solid  black  ;
+
+  width:6px;
+
+  height:45px;
+
+  margin-top: -9px;
+
+  margin-left:85px;
+
+  transform: rotate(70deg)
+
 }
